--- a/test.html
+++ b/test.html
@@ -7,7 +7,20 @@
     <link rel="stylesheet" href="text.css">
 </head>
 <body>
-    <h1>Audio & Video</h1>
+    <div><h1>Audio & Video</h1>
+    </div>
+    <div>
+        <h2>Audio</h2>
+        <audio src="parts/sample.mp3" controls>Sample Audio</audio>
+    </div>
+    <div>
+        <h2>video</h2>
+        <video src="parts/sampleV.mp4" controls></video>
+    </div>
+    <div>
+        <h2>Video from YouTube with iframe</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vJWzH_2F64g?si=CJYBTtyNRIjgCiHr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
      
 </body>
 </html>
