--- a/non-semantic.html
+++ b/non-semantic.html
@@ -19,5 +19,9 @@
         <h2>Third Blog</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum explicabo nam quaerat similique alias repudiandae sapiente delectus odit minima repellat dolorem fuga in, aspernatur earum eum tempore totam quam neque expedita quo exercitationem aut quae reprehenderit. Dolor, pariatur? Dolorem nostrum laboriosam amet labore unde molestiae ipsa temporibus non, vel cupiditate? Aliquid ut tenetur in porro quos fugiat delectus animi harum hic expedita nobis voluptas omnis a facere sequi velit optio illum quod, eum eos? Sit temporibus vel placeat recusandae consequatur.</p>
     </div>
+    <div class="blog">
+        <h2>Third Blog</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum explicabo nam quaerat similique alias repudiandae sapiente delectus odit minima repellat dolorem fuga in, aspernatur earum eum tempore totam quam neque expedita quo exercitationem aut quae reprehenderit. Dolor, pariatur? Dolorem nostrum laboriosam amet labore unde molestiae ipsa temporibus non, vel cupiditate? Aliquid ut tenetur in porro quos fugiat delectus animi harum hic expedita nobis voluptas omnis a facere sequi velit optio illum quod, eum eos? Sit temporibus vel placeat recusandae consequatur.</p>
+    </div>
 </body>
 </html>
