--- a/formSturcture.html
+++ b/formSturcture.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="formSturcture.css">
 </head>
 <body>
-    <h1>Food Shop</h1>
-    
+    <!-- Head Section is in this section -->
+    <head>
+        <h1>Food Shop</h1>
+    </head>
+
+    <!-- Mainly the all the parts will be in this section. -->
+    <main>
+        
+    </main>
+
+    <!-- The footer will be in the section -->
+    <footer>
+
+    </footer>
 </body>
 </html>
