--- a/formSturcture.html
+++ b/formSturcture.html
@@ -28,6 +28,8 @@
              <label for="name">Email
             <input id="name" type="text" placeholder="Your Email">
             </label>
+            <input type="submit">
+            <input type="reset">
             </fieldset>
 
             <fieldset>
@@ -47,6 +49,8 @@
                 <label for="Pizza">
                     <input type="checkbox" name="food" id="Pizza"> Pizza
                 </label>
+                <input type="submit">
+                <input type="reset">
             </fieldset>
 
             <fieldset>
@@ -63,10 +67,14 @@
                 <label for="Cheese">
                     <input type="radio" name="Sauce" id="Cheese"> Cheese
                 </label>
+                <input type="submit">
+                <input type="reset">
             </fieldset> 
             <fieldset>
                 <legend>Special Instruction</legend>
-                <textarea name="" id="" cols="100" rows="3"></textarea>
+                <textarea name="" id="" cols="100" rows="3">Give your Customization Idea</textarea> <br>
+                <input type="submit">
+                <input type="reset">
             </fieldset>
              
         </form>
