nav added to all

--- a/formSturcture.html
+++ b/formSturcture.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Shop</title>
     <link rel="stylesheet" href="formSturcture.css">
+    <link rel="stylesheet" href="style/nav.css">
 </head>
 <body>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="index.html">index</a></li>
+            <li><a href="formSturcture.html">Form </a></li>
+            <li><a href="test.html">Test</a></li>
+          </ul>
+        </nav>
+      </header>
     <!-- Head Section is in this section -->
     <head>
         <h1>Fast Food Shop</h1>
