--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5</title>
+    <link rel="stylesheet" href="style/nav.css">
 </head>
 <body>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="index.html">index</a></li>
+            <li><a href="formSturcture.html">Form </a></li>
+            <li><a href="test.html">Test</a></li>
+          </ul>
+        </nav>
+      </header>
     <h1>HTML5 and CSS</h1>
 </body>
 </html>
