--- a/table.html
+++ b/table.html
@@ -5,51 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
     <link rel="stylesheet" href="table.css" />
+    <link rel="stylesheet" href="style/nav.css" />
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">index</a></li>
+          <li><a href="formSturcture.html">Form </a></li>
+          <li><a href="test.html">Test</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
-        <h1>Company List</h1>
+      <h1>Company List</h1>
 
-    <table>
-      <tr>
-        <th>No</th>
-        <th>Full Name</th>
-        <th>Position</th>
-        <th>Salary</th>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>Bill</td>
-        <td>MS</td>
-        <td>1000</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Steve</td>
-        <td>Apple</td>
-        <td>1200</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>Larry</td>
-        <td>Google</td>
-        <td>1100</td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td>Mark</td>
-        <td>FB</td>
-        <td>1300</td>
-      </tr>
-    </table>
-    <ul>
-      <li>Table: Table</li>
-      <li>Table Head: thead</li>
-      <li>Table body: tbody</li>
-      <li>Table footer: tfoot</li>
-      <li>Table row: tr</li>
-      <li>table data or table cell: td</li>
-    </ul>
+      <table>
+        <tr>
+          <th>No</th>
+          <th>Full Name</th>
+          <th>Position</th>
+          <th>Salary</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Bill</td>
+          <td>MS</td>
+          <td>1000</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Steve</td>
+          <td>Apple</td>
+          <td>1200</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Larry</td>
+          <td>Google</td>
+          <td>1100</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Mark</td>
+          <td>FB</td>
+          <td>1300</td>
+        </tr>
+      </table>
+      <ul>
+        <li>Table: Table</li>
+        <li>Table Head: thead</li>
+        <li>Table body: tbody</li>
+        <li>Table footer: tfoot</li>
+        <li>Table row: tr</li>
+        <li>table data or table cell: td</li>
+      </ul>
     </main>
   </body>
 </html>
