--- a/test.html
+++ b/test.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <link rel="stylesheet" href="text.css">
+    <link rel="stylesheet" href="style/nav.css">
 </head>
 <body>
+    <header>
+        <nav>
+          <ul>
+            <li><a href="index.html">index</a></li>
+            <li><a href="formSturcture.html">Form </a></li>
+            <li><a href="test.html">Test</a></li>
+          </ul>
+        </nav>
+      </header>
     <div><h1>Audio & Video</h1>
     </div>
     <div>
