nested nav added

--- a/formSturcture.html
+++ b/formSturcture.html
@@ -1,99 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Shop</title>
-    <link rel="stylesheet" href="formSturcture.css">
-    <link rel="stylesheet" href="style/nav.css">
-</head>
-<body>
+    <link rel="stylesheet" href="formSturcture.css" />
+    <link rel="stylesheet" href="style/nav.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-          <ul>
-            <li><a href="index.html">index</a></li>
-            <li><a href="formSturcture.html">Form </a></li>
-            <li><a href="test.html">Test</a></li>
-          </ul>
-        </nav>
-      </header>
+      <nav>
+        <ul>
+          <li><a href="index.html">index</a></li>
+          <li><a href="formSturcture.html">Form </a></li>
+          <li><a href="test.html">Test</a></li>
+        </ul>
+      </nav>
+    </header>
     <!-- Head Section is in this section -->
     <head>
-        <h1>Fast Food Shop</h1>
+      <h1>Fast Food Shop</h1>
     </head>
 
     <!-- Mainly the all the parts will be in this section. -->
     <main>
-        <h2>The Form</h2>
-        <form>
-            <!-- Setting a field with Radio Type -->
-            <fieldset>
-                <legend>Give your Details</legend>
-             <label for="name">Name
-            <input id="name" type="text" placeholder="Your Name">
-            </label>
-             <label for="name">Phone
-            <input id="name" type="number" placeholder="Your Name">
-            </label>
-             <label for="name">Email
-            <input id="name" type="text" placeholder="Your Email">
-            </label>
-            <input type="submit">
-            <input type="reset">
-            </fieldset>
+      <h2>The Form</h2>
+      <form>
+        <!-- Setting a field with Radio Type -->
+        <fieldset>
+          <legend>Give your Details</legend>
+          <label for="name"
+            >Name
+            <input id="name" type="text" placeholder="Your Name" />
+          </label>
+          <label for="name"
+            >Phone
+            <input id="name" type="number" placeholder="Your Name" />
+          </label>
+          <label for="name"
+            >Email
+            <input id="name" type="text" placeholder="Your Email" />
+          </label>
+          <input type="submit" />
+          <input type="reset" />
+        </fieldset>
 
-            <fieldset>
-                <legend>Choose Your Food</legend>
-                <label for="Burger">
-                    <input type="checkbox" name="food" id="Burger"> Burger
-                </label>
-                <label for="Chicken-Fry">
-                    <input type="checkbox" name="food" id="Chicken-Fry"> Chicken-Fry
-                </label>
-                <label for="French-Fry">
-                    <input type="checkbox" name="food" id="French-Fry"> French-Fry
-                </label>
-                <label for="Pasta">
-                    <input type="checkbox" name="food" id="Pasta"> Pasta
-                </label>
-                <label for="Pizza">
-                    <input type="checkbox" name="food" id="Pizza"> Pizza
-                </label>
-                <input type="submit">
-                <input type="reset">
-            </fieldset>
+        <fieldset>
+          <legend>Choose Your Food</legend>
+          <label for="Burger">
+            <input type="checkbox" name="food" id="Burger" /> Burger
+          </label>
+          <label for="Chicken-Fry">
+            <input type="checkbox" name="food" id="Chicken-Fry" /> Chicken-Fry
+          </label>
+          <label for="French-Fry">
+            <input type="checkbox" name="food" id="French-Fry" /> French-Fry
+          </label>
+          <label for="Pasta">
+            <input type="checkbox" name="food" id="Pasta" /> Pasta
+          </label>
+          <label for="Pizza">
+            <input type="checkbox" name="food" id="Pizza" /> Pizza
+          </label>
+          <input type="submit" />
+          <input type="reset" />
+        </fieldset>
 
-            <fieldset>
-                <legend>Pick Only One sauce</legend>
-                <label for="Ketchup">
-                    <input type="radio" name="Sauce" id="Ketchup"> Ketchup
-                </label>
-                <label for="Mayonez">
-                    <input type="radio" name="Sauce" id="Mayonez"> Mayonez
-                </label>
-                <label for="Honey mustard">
-                    <input type="radio" name="Sauce" id="Honey mustard"> Honey Mustard
-                </label>
-                <label for="Cheese">
-                    <input type="radio" name="Sauce" id="Cheese"> Cheese
-                </label>
-                <input type="submit">
-                <input type="reset">
-            </fieldset> 
-            <fieldset>
-                <legend>Special Instruction</legend>
-                <textarea name="" id="" cols="100" rows="3">Give your Customization Idea</textarea> <br>
-                <input type="submit">
-                <input type="reset">
-            </fieldset>
-             
-        </form>
-
+        <fieldset>
+          <legend>Pick Only One sauce</legend>
+          <label for="Ketchup">
+            <input type="radio" name="Sauce" id="Ketchup" /> Ketchup
+          </label>
+          <label for="Mayonez">
+            <input type="radio" name="Sauce" id="Mayonez" /> Mayonez
+          </label>
+          <label for="Honey mustard">
+            <input type="radio" name="Sauce" id="Honey mustard" /> Honey Mustard
+          </label>
+          <label for="Cheese">
+            <input type="radio" name="Sauce" id="Cheese" /> Cheese
+          </label>
+          <input type="submit" />
+          <input type="reset" />
+        </fieldset>
+        <fieldset>
+          <legend>Special Instruction</legend>
+          <textarea name="" id="" cols="100" rows="3">
+Give your Customization Idea</textarea
+          >
+          <br />
+          <input type="submit" />
+          <input type="reset" />
+        </fieldset>
+      </form>
     </main>
 
     <!-- The footer will be in the section -->
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
