--- a/table.html
+++ b/table.html
@@ -13,6 +13,23 @@
         <ul>
           <li><a href="index.html">index</a></li>
           <li><a href="formSturcture.html">Form </a></li>
+          <li>
+            <a href="table.html">Table</a>
+            <ul class="dropdown">
+              <li><a href="index.html">index</a></li>
+              <li><a href="formSturcture.html">Form </a></li>
+              <li>
+                <a href="table.html">Table</a>
+                <ul class="dropdown">
+                  <li><a href="index.html">index</a></li>
+                  <li><a href="formSturcture.html">Form </a></li>
+                  <li><a href="table.html">Table</a></li>
+                  <li><a href="test.html">Test</a></li>
+                </ul>
+              </li>
+              <li><a href="test.html">Test</a></li>
+            </ul>
+          </li>
           <li><a href="test.html">Test</a></li>
         </ul>
       </nav>
